[package]
name = "differential-aggregate-query"
version = "0.1.0"
authors = ["David Bach <bachd@ethz.ch>"]

[dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
serde = "1"
serde_derive = "1"
serde_json = "1"
abomonation = "0.7"
abomonation_derive = "0.3"