[package]
name = "differential-aggregate-query"
version = "0.1.0"
authors = ["David Bach <bachd@ethz.ch>"]

[dependencies]
timely = { version = "0.9.0", features = ["bincode"] }
differential-dataflow = { version = "0.9.0" }
serde = "1"
serde_derive = "1"
serde_json = "1"
abomonation = "0.7"
abomonation_derive = "0.3"